--- a/site/home.html
+++ b/site/home.html
@@ -1,1 +1,15 @@
+<!DOCTYPE html>
+<head>
+  <title>SleekCord</title>
+</head>
 
+<style>
+  body {
+    color: #eee;
+    background: #111;
+  }
+</style>
+
+<body>
+  <h>SleekCord</h>
+</body>
