--- a/site/home.html
+++ b/site/home.html
@@ -9,8 +9,11 @@
     background: #111;
     font-family: monospace;
   }
+  header {
+    text-align: center;
+  }
 </style>
 
 <body>
-  <h>SleekCord</h>
+  <header>SleekCord</header>
 </body>
