--- a/site/home.html
+++ b/site/home.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <head>
   <title>SleekCord</title>
+  <link href="./output.css" rel="stylesheet">
 </head>
 
 <style>
   body {
     color: #eee;
     background: #111;
-    font-family: monospace;
-  }
-  header {
     text-align: center;
+    font-family: monospace;
   }
 </style>
 
+<script>
+  // auto refresh to see changes after saving
+  setInterval(function() {location.reload();}, 5000);
+</script>
+
 <body>
-  <header>SleekCord</header>
+  <div class="bg-auto">
+    <img src="banner.png" alt="banner">
+  </div>
 </body>
