--- a/site/home.html
+++ b/site/home.html
@@ -19,7 +19,7 @@
 </script>
 
 <body>
-  <div class="bg-auto">
+  <div class="h-auto bg-auto" style="max-width:100%;">
     <img src="banner.png" alt="banner">
   </div>
 </body>
