--- a/site/home.html
+++ b/site/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <title>SleekCord</title>
-  <link href="./output.css" rel="stylesheet">
+  <link href="./home.css" rel="stylesheet">
 </head>
 
 <style>
@@ -15,11 +15,23 @@
 
 <script>
   // auto refresh to see changes after saving
-  setInterval(function() {location.reload();}, 5000);
+  setInterval(function() {location.reload();}, 2000);
 </script>
 
 <body>
-  <div class="h-auto bg-auto" style="max-width:100%;">
-    <img src="banner.png" alt="banner">
+  <div>
+    <img class="w-full h-auto object-cover" src="pretty.jpg" alt="banner">
   </div>
+  <br>
+  <h1 class="text-5xl font-bold">SleekCord</h1>
+  <br>
+  <h1 class="text-5xl font-bold">SleekCord</h1>
+  <br>
+  <h1 class="text-5xl font-bold">SleekCord</h1>
+  <br>
+  <h1 class="text-5xl font-bold">SleekCord</h1>
+  <br>
+  <h1 class="text-5xl font-bold">SleekCord</h1>
+  <br>
+  <h1 class="text-5xl font-bold">SleekCord</h1>
 </body>
