--- a/site/home.html
+++ b/site/home.html
@@ -4,34 +4,30 @@
   <link href="./home.css" rel="stylesheet">
 </head>
 
-<style>
-  body {
-    color: #eee;
-    background: #111;
-    text-align: center;
-    font-family: monospace;
-  }
-</style>
-
 <script>
   // auto refresh to see changes after saving
-  setInterval(function() {location.reload();}, 2000);
+  setInterval(function() {location.reload();}, 2000); //2s
 </script>
 
-<body>
-  <div>
+<body class="bg-stone-950 text-blue-50 text-center font-mono">
+  <div class="relative">
     <img class="w-full h-auto object-cover" src="pretty.jpg" alt="banner">
+
+    <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-center">
+      <h1 class="font-[Montserrat] font-medium text-5xl text-blue-800 opacity-75">SleekCord</h1>
+    </div>
   </div>
+
   <br>
-  <h1 class="text-5xl font-bold">SleekCord</h1>
+  <h1 class="font-bold">SleekCord</h1>
   <br>
-  <h1 class="text-5xl font-bold">SleekCord</h1>
+  <h1 class="font-bold">SleekCord</h1>
   <br>
-  <h1 class="text-5xl font-bold">SleekCord</h1>
+  <h1 class="font-bold">SleekCord</h1>
   <br>
-  <h1 class="text-5xl font-bold">SleekCord</h1>
+  <h1 class="font-bold">SleekCord</h1>
   <br>
-  <h1 class="text-5xl font-bold">SleekCord</h1>
+  <h1 class="font-bold">SleekCord</h1>
   <br>
-  <h1 class="text-5xl font-bold">SleekCord</h1>
+  <h1 class="font-bold">SleekCord</h1>
 </body>
