--- a/site/home.html
+++ b/site/home.html
@@ -6,6 +6,10 @@
 
   <link href="./home.css" rel="stylesheet">
   <link href="./glow.css" rel="stylesheet">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 
 <script>
