--- a/site/home.html
+++ b/site/home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
   <title>SleekCord</title>
+  <link rel="icon" href="SleekCord Logo.ico" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
