Update banner link

--- a/site/home.html
+++ b/site/home.html
@@ -20,7 +20,7 @@
 
 <body class="font-[Montserrat] bg-black text-blue-50 text-center flex flex-col justify-center items-center">
   <div class="relative">
-    <img class="w-full h-auto object-cover" src="aishot-2377.jpg" alt="banner">
+    <img class="w-full h-auto object-cover" src="Banner.webp" alt="banner">
 
     <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-center">
       <h1 class="font-medium text-7xl opacity-75" style="color: oklch(60% 0.233 277.117);">SleekCord</h1>
