--- a/site/opengraphtest/15.html
+++ b/site/opengraphtest/15.html
@@ -7,6 +7,6 @@
     <meta data-rh="true" property="og:image:type" content="image/png">
     <meta data-rh="true" property="og:image" content="https://tnt4me.github.io/SleekCord/site/banner-raw.png">
     <meta data-rh="true" property="og:image:alt" content="SleekCord Discord Theme">
-    <meta data-rh="true" property="og:image:width" content="1920">
-    <meta data-rh="true" property="og:image:height" content="1080">
+    <meta data-rh="true" property="og:image:width" content="1920"> https://tnt4me.github.io/SleekCord/site/opengraphtest/1.html
+    <meta data-rh="true" property="og:image:height" content="1080">/*ratio 1.91:1 or 1200×630*/
 </html>
